# Smart_FIR_assitant

./: .env.example  .gitignore  AI_IPC_GUIDE.md  API_INTEGRATION_GUIDE.md  ARCHITECTURE.md  CODE_INDEX.md  CONFIG.md  CPP_BACKEND_GUIDE.md  DATA_STRUCTURES_FLOW.md  DATA_STRUCTURES_USAGE.md  EMAILJS_SETUP_GUIDE.md  EMAIL_QUICKSTART.md  EMAIL_SETUP.md  FEATURES.md  FLOWCHARTS.md  GET_EMAIL_KEY.md  KEYWORD_EXAMPLES.md  NEW_FEATURES.md  OOP_CONCEPTS_GUIDE.md  OOP_DIAGRAMS.md  OOP_SUMMARY.md  PROFESSIONAL_GUIDE.md  PROGRAM_FLOW.md  PROJECT_COMPLETE.md  QUICKSTART_AI.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  README_CPP.md  README_EMAIL_SETUP.md  REAL_EMAIL_TEST.md  SETUP_API_KEY.md  SETUP_CHECKLIST.md  START_CPP_BACKEND.md  START_HERE.md  SUMMARY.md  TECHNOLOGY_STACK.md  TEST_GUIDE.md  UI_GUIDE.md  VERSION_COMPARISON.md  (+19 more)
backend/: CMakeLists.txt  README.md  avl_tree.hpp  fir_record.hpp  fir_server.cpp  fir_store.hpp  graph.hpp  ipc_store.hpp  oop_concepts.hpp  oop_demo  oop_demo.cpp  server.cpp  setup.sh  trie.hpp
